--- a/Hans Scuba - main page.html
+++ b/Hans Scuba - main page.html
@@ -2,15 +2,15 @@
 
 <html>
     <head>
-        <title>Hans Scuba - That's a very nice wetsuit, Mr Takagi</title>
+        <title>Hans Scuba - Dive Hard</title>
     </head>
     <body>
         <header>
-            <span style="color:blue;font-family:verdana;">Your one stop app to the ultimate dive trip</span>
+            <span style="color:blue;font-size:smaller;font-family:verdana;">Your one stop app to the ultimate dive trip</span>
             <hr>
         </header>
-        <aside style="font-size:larger; font-style:italic;color:red;float:right;width:130px">
-            Welcome to Hans Scuba, where you will everything you need
+        <aside style="font-size:smaller;color:red;float:right;width:200px">
+            Welcome to Dive Hard, where you will find everything you need
             to plan and book your perfect dive holiday.
         </aside>
             <nav>
@@ -21,9 +21,13 @@
             </nav>
             <article>
                 <section>
-                    <h1>Hans Scuba</h1>
+                    <h1>Dive Hard with Hans Scuba</h1>
                     <p>Plan your perfect diving holiday here</p>
                 </section>
+                <a href=""><img src="Images/best locations img.jpg" alt="Best locations">Best locations</a>
+                <a href=""><img src="Images/flora and fauna.jpg" alt="Flora and fauna">Flora and Fauna</a>
+                <a href=""><img src="Images/equipment and gear.jpg"  alt="Equipment and gear">Equipment and gear</a> 
+                <a href=""><img src="Images/your photographs.jpg" alt="Your photographs">Your photographs</a>
             </article>
         <nav
     </body>
