--- a/Best locations.html
+++ b/Best locations.html
@@ -24,10 +24,10 @@
                     <h1>Dive Hard with Hans Scuba</h1>
                     <p>Plan your perfect diving holiday here</p>
                 </section>
-                <a href=""><img height="100" width="150" src="Images/best locations img.jpg" alt="Best locations">Best locations</a>
-                <a href=""><img height="100" width="150" src="Images/flora and fauna.jpg" alt="Flora and fauna">Flora and Fauna</a>
-                <a href=""><img height="100" width="150" src="Images/equipment and gear.jpg"  alt="Equipment and gear">Equipment and gear</a> 
-                <a href=""><img height="100" width="150" src="Images/your photographs.jpg" alt="Your photographs">Your photographs</a>
+                <a href=""><img src="Images/best locations img.jpg" alt="Best locations">Best locations</a>
+                <a href=""><img src="Images/flora and fauna.jpg" alt="Flora and fauna">Flora and Fauna</a>
+                <a href=""><img src="Images/equipment and gear.jpg"  alt="Equipment and gear">Equipment and gear</a> 
+                <a href=""><img src="Images/your photographs.jpg" alt="Your photographs">Your photographs</a>
             </article>
         <nav
     </body>
