--- a/Hans Scuba - main page.html
+++ b/Hans Scuba - main page.html
@@ -24,10 +24,10 @@
                     <h1>Dive Hard with Hans Scuba</h1>
                     <p>Plan your perfect diving holiday here</p>
                 </section>
-                <a href=""><img height="100" width="150" src="Images/best locations img.jpg" alt="Best locations">Best locations</a>
-                <a href=""><img height="100" width="150" src="Images/flora and fauna.jpg" alt="Flora and fauna">Flora and Fauna</a>
-                <a href=""><img height="100" width="150" src="Images/equipment and gear.jpg"  alt="Equipment and gear">Equipment and gear</a> 
-                <a href=""><img height="100" width="150" src="Images/your photographs.jpg" alt="Your photographs">Your photographs</a>
+                <a href="C:\Users\willk\OneDrive\Desktop\Python\Web Development\Scuba app\Scuba-app\Best locations.html"><img height="100" width="150" src="Images/best locations img.jpg" alt="Best locations">Best locations</a>
+                <a href="C:\Users\willk\OneDrive\Desktop\Python\Web Development\Scuba app\Scuba-app\Flora and Fauna.html"><img height="100" width="150" src="Images/flora and fauna.jpg" alt="Flora and fauna">Flora and Fauna</a>
+                <a href="C:\Users\willk\OneDrive\Desktop\Python\Web Development\Scuba app\Scuba-app\Equipment and gear.html"><img height="100" width="150" src="Images/equipment and gear.jpg"  alt="Equipment and gear">Equipment and gear</a> 
+                <a href="C:\Users\willk\OneDrive\Desktop\Python\Web Development\Scuba app\Scuba-app\Your photographs.html"><img height="100" width="150" src="Images/your photographs.jpg" alt="Your photographs">Your photographs</a>
             </article>
         <nav
     </body>
