--- a/Your photographs.html
+++ b/Your photographs.html
@@ -2,17 +2,45 @@
 
 <html>
     <head>
-        <title>Hans Scuba - Photographs</title>
+        <title>HS - Photographs</title>
+
+        <style>
+            img
+                {
+                    width:100px;
+                    height:90px;
+                }
+
+            th
+                {
+                    font-size: 2em;
+                    background-color: #f9ddff;
+                    padding:20px;
+                }
+
+            body
+                {
+                    font-family: sans-serif;
+                    font-size: 1em;
+                    text-align: center;
+                    background-color: aquamarine;
+                }
+            table
+                {
+                    background-color: azure;
+                    width: 60%;
+                }
+            td
+                {
+                    padding:25px;
+                }
+        </style>
     </head>
     <body>
         <header>
             <span style="color:blue;font-size:smaller;font-family:verdana;">Your one stop app to the ultimate dive trip</span>
             <hr>
         </header>
-        <aside style="font-size:smaller;color:red;float:right;width:200px">
-            Welcome to Dive Hard, where you will find everything you need
-            to plan and book your perfect dive holiday.
-        </aside>
             <nav>
                 <a href="">Best locations</a> |
                 <a href="">Flora and fauna</a> |
@@ -24,10 +52,30 @@
                     <h1>Dive Hard with Hans Scuba</h1>
                     <p>Plan your perfect diving holiday here</p>
                 </section>
-                <a href=""><img src="Images/best locations img.jpg" alt="Best locations">Best locations</a>
-                <a href=""><img src="Images/flora and fauna.jpg" alt="Flora and fauna">Flora and Fauna</a>
-                <a href=""><img src="Images/equipment and gear.jpg"  alt="Equipment and gear">Equipment and gear</a> 
-                <a href=""><img src="Images/your photographs.jpg" alt="Your photographs">Your photographs</a>
+             <table align="center">
+                <tr>
+                    <th colspan="5">Photo gallery</th>
+                </tr>
+                <tr>
+                    <td colspan="5">Click on the thumbnails below to enlarge image</td>
+                </tr>
+
+                <tr>
+                    <td><a href="Images/User photographs/img1.jpg"><img src="Images/User photographs/img1.jpg"></a></td>
+                    <td><a href="Images/User photographs/img2.jpg"><img src="Images/User photographs/img2.jpg"></a></td>
+                    <td><a href="Images/User photographs/img3.jpg"><img src="Images/User photographs/img3.jpg"></a></td>
+                    <td><a href="Images/User photographs/img4.jpg"><img src="Images/User photographs/img4.jpg"></a></td>
+                    <td><a href="Images/User photographs/img5.jpg"><img src="Images/User photographs/img5.jpg"></a></td>
+                </tr>
+                <tr>
+                    <td><a href="Images/User photographs/img6.jpg"><img src="Images/User photographs/img6.jpg"></a></td>
+                    <td><a href="Images/User photographs/img7.jpg"><img src="Images/User photographs/img7.jpg"></a></td>
+                    <td><a href="Images/User photographs/img8.jpg"><img src="Images/User photographs/img8.jpg"></a></td>
+                    <td><a href="Images/User photographs/img9.jpg"><img src="Images/User photographs/img9.jpg"></a></td>
+                    <td><a href="Images/User photographs/img10.jpg"><img src="Images/User photographs/img10.jpg"></a></td> 
+                </tr>
+            </table>
+                
             </article>
         <nav
     </body>
