--- a/Hans Scuba - main page.html
+++ b/Hans Scuba - main page.html
@@ -3,15 +3,50 @@
 <html>
     <head>
         <title>Hans Scuba - Dive Hard</title>
+        <style>
+            img
+                {
+                    width:150px;
+                    height:130px;
+                }
+
+
+            body
+                {
+                    font-family: sans-serif;
+                    font-size: 1em;
+                    text-align: center;
+                    background-color: rgb(219, 234, 235);
+                }
+            table
+                {
+                    background-color: rgb(197, 175, 169);
+                    width: 60%;
+                }
+            td
+                {
+                    padding:25px;
+                }
+        </style>
     </head>
     <body>
         <header>
-            <span style="color:blue;font-size:smaller;font-family:verdana;">Your one stop app to the ultimate dive trip</span>
+            <span style="color:rgba(31, 116, 20, 0.774);font-size:smaller;font-family:verdana;">Your one stop app to the ultimate dive trip</span>
             <hr>
         </header>
-        <aside style="font-size:smaller;color:red;float:right;width:200px">
+        <aside style="font-size:smaller;color:rgba(31, 116, 20, 0.774);float:left;width:200px">
             Welcome to Dive Hard, where you will find everything you need
-            to plan and book your perfect dive holiday.
+            to plan and book your perfect dive holiday
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
         </aside>
             <nav>
                 <a href="">Best locations</a> |
@@ -24,10 +59,19 @@
                     <h1>Dive Hard with Hans Scuba</h1>
                     <p>Plan your perfect diving holiday here</p>
                 </section>
-                <a href="C:\Users\willk\OneDrive\Desktop\Python\Web Development\Scuba app\Scuba-app\Best locations.html"><img height="100" width="150" src="Images/best locations img.jpg" alt="Best locations">Best locations</a>
-                <a href="C:\Users\willk\OneDrive\Desktop\Python\Web Development\Scuba app\Scuba-app\Flora and Fauna.html"><img height="100" width="150" src="Images/flora and fauna.jpg" alt="Flora and fauna">Flora and Fauna</a>
-                <a href="C:\Users\willk\OneDrive\Desktop\Python\Web Development\Scuba app\Scuba-app\Equipment and gear.html"><img height="100" width="150" src="Images/equipment and gear.jpg"  alt="Equipment and gear">Equipment and gear</a> 
-                <a href="C:\Users\willk\OneDrive\Desktop\Python\Web Development\Scuba app\Scuba-app\Your photographs.html"><img height="100" width="150" src="Images/your photographs.jpg" alt="Your photographs">Your photographs</a>
+                <table align="center">
+                    <tr>
+                        <th colspan="4">What are you looking for?</th>
+                    </tr>
+                    <tr>
+                        <td colspan="4">Click on the thumbnails below to see more</td>
+                    </tr>
+    
+                    <tr>
+                        <td><a href="Best locations.html"><img src="Images/Main page thumbnails/best locations img.jpg">Best diving locations</a></td>
+                        <td><a href="Flora and Fauna.html"><img src="Images/Main page thumbnails/flora and fauna.jpg">Flora and fauna</a></td>
+                        <td><a href="Equipment and gear.html"><img src="Images/Main page thumbnails/equipment and gear.jpg">Equipment and gear</a></td>
+                        <td><a href="Your photographs.html"><img src="Images/Main page thumbnails/your photographs.jpg">Your photographs</a></td>
             </article>
         <nav
     </body>
